[gd_scene load_steps=5 format=2]

[ext_resource path="res://Models/uploads_files_2075240_dice.glb" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Dice.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=2]
bounce = 0.52

[sub_resource type="BoxShape" id=1]

[node name="Dice" instance=ExtResource( 1 )]
mass = 3.49
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Cube" parent="." index="0"]
transform = Transform( 0, 0, 1, 0, 1, 0, -1, 0, 0, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="." index="3"]
shape = SubResource( 1 )

[node name="RayCast6" type="RayCast" parent="." index="4"]
enabled = true
cast_to = Vector3( 0, -2, 0 )

[node name="RayCast1" type="RayCast" parent="." index="5"]
enabled = true
cast_to = Vector3( 0, 2, 0 )

[node name="RayCast2" type="RayCast" parent="." index="6"]
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="RayCast5" type="RayCast" parent="." index="7"]
enabled = true
cast_to = Vector3( 0, 0, 2 )

[node name="RayCast3" type="RayCast" parent="." index="8"]
enabled = true
cast_to = Vector3( 2, 0, 0 )

[node name="RayCast4" type="RayCast" parent="." index="9"]
enabled = true
cast_to = Vector3( -2, 0, 0 )
